--- a/nginx/api.conf
+++ b/nginx/api.conf
@@ -37,6 +37,6 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    proxy_pass http://127.0.0.1:3001;
+    proxy_pass http://backend:3001;
   }
 }
