--- a/nginx/website.conf
+++ b/nginx/website.conf
@@ -36,6 +36,6 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    proxy_pass http://127.0.0.1:3002;
+    proxy_pass http://frontend:3002;
   }
 }
