Hopefully make a node running on 3004 work
I shouldn't break anything else just my site if this doesn't work

Right

--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -11,6 +11,9 @@ legiti.dev {
 
 
 hazel.legiti.dev {
+	handle /adv {
+		reverse_proxy localhost:3004
+	}
 	root * /var/www/hazel.legiti.dev
 	file_server
 }
