--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -11,7 +11,7 @@ legiti.dev {
 
 
 hazel.legiti.dev {
-	handle /adv {
+	handle /adv/* {
 		reverse_proxy localhost:3004
 	}
 	root * /var/www/hazel.legiti.dev
