--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -11,7 +11,11 @@ legiti.dev {
 
 
 hazel.legiti.dev {
-  reverse_proxy backend:3004
+	handle_path /adv/* {
+		reverse_proxy localhost:3004
+	}
+	root * /var/www/hazel.legiti.dev
+	file_server
 }
 
 rawr.legiti.dev {
