--- a/conf/Caddyfile
+++ b/conf/Caddyfile
@@ -11,7 +11,7 @@ legiti.dev {
 
 
 hazel.legiti.dev {
-	handle_path /adv {
+	handle_path /adv/* {
 		reverse_proxy 172.17.0.1:3004
 	}
 	root * /var/www/hazel.legiti.dev
