--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,9 @@
 services:
+  uptime-kuma:
+    image: louislam/uptime-kuma:2
+    restart: unless-stopped
+    volumes:
+      - ./uptime-data:/app/data
   frontend:
     build: website/
     restart: unless-stopped
@@ -32,7 +37,7 @@ services:
     image: mongo
     restart: unless-stopped
     volumes:
-      - $PWD/data:/data/db
+      - ./data:/data/db
     ports:
       - "27017:27017"
 volumes:
